improve margin and padding

--- a/index.html
+++ b/index.html
@@ -98,6 +98,16 @@
         display: none;
       }
     }
+
+    @media screen and (max-width: 500px) {
+      .cross-selling-box{
+        margin: 0 8px;
+      }
+
+      .cross-selling-main-text {
+        padding: 0 8px;
+      }
+    }
   </style>
 </head>
 <body>
